fdo#48536: prevent lineends from exceeding the background area

Change-Id: I17d404640494c3964bdbada8f855af6e97823c2d